css/custom.css
/* GENERAL CHANGES */
body {
	-webkit-font-smoothing: antialiased;
	overflow-x: hidden;
	font-family: 'ProximaNova';
}
.liten {
	font-size: .3em !important;
	margin-top: .5em;
	display: inline-block;
	vertical-align: middle;
	margin-left: .5em;
}

.button-group {
	margin: 0 0 3em 0;
}

.flat-icon {
	padding: 15px 16px;
	display: inline-block;
	line-height: 100%;
	overflow: hidden;
	border-radius: 10000px;
	-moz-border-radius: 10000px;
  -webkit-border-radius: 10000px;
  -webkit-transition: 0.3s -webkit-transform;
  background: #e87966;
}
.work-process .flat-icon {
	background: #9AB5bc;
	font-size: 14px;
	padding: 25px;
}
.work-process h4 {
	margin-top: 16px;
}
.work-process .text-overlay {
	position: absolute;
	background: #A1BDC4;
	top: -20px;
	right: -20px;
	left: -20px;
	bottom: -10px;
	z-index: 10;
	border-radius: 5px;
	font-size: 16px;
	line-height: 22px;
	padding: 30px;
	color: #FFF;
	opacity: 0;
	-webkit-transition: 0.3s all;
	-webkit-transform: scale(0.5);
}
.work-process .large-3:hover .text-overlay {
	opacity: 1;
	-webkit-transform: scale(1);
}
.work-process .large-3:hover .flat-icon {
	-webkit-transform: scale(0.5);
}
.work-process .large-3:hover > h4 {
	opacity: 0;
}
.facts-block .kontor {
	background: #f6f2e9;
	}
.kontor h2, .kontor h5 {
	color: #868686;
	line-height: .8em;
	margin-bottom: 0;
}
.kontor h5 {
	padding-bottom: 1em;
	padding-top: .5em;
}
.icon-Kontor_1 {
	font-size: 10em;	
	color: #868686;
}
.icon-Kontor_2 {
	font-size: 7em;
	color: #868686;
	opacity: 0;
	position: absolute;
	opacity: 0;
	bottom:20px;
	-webkit-transition: all 0.5s;
	left: 50%;
	margin-left: -56px;

}
.kontor:hover .icon-Kontor_2 {
	bottom: 125px;
	opacity: 1;
}
.kontor:hover .icon-Kontor_1:before {
	-webkit-animation: shake 0.5s 0.4s infinite linear;
}
.icon-Analys, .icon-Strategi, .icon-Ideer, .icon-Kommunikation, .icon-Design, .icon-Webb {
	font-size: 7em !important;
}
.icon-Forsta, .icon-Formulera, .icon-Forandra  {
	font-size: 10em;
	color:#d8e3e1;
}
/* Effect 13: three circles */
.cl-effect-13 a {
	-webkit-transition: color 0.3s;
	-moz-transition: color 0.3s;
	transition: color 0.3s;
}

.cl-effect-13 a::before {
	position: absolute;
	top: 100%;
	left: 50%;
	color: transparent;
	content: '•';
	text-shadow: 0 0 transparent;
	font-size: 1.2em;
	-webkit-transition: text-shadow 0.3s, color 0.3s;
	-moz-transition: text-shadow 0.3s, color 0.3s;
	transition: text-shadow 0.3s, color 0.3s;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	transform: translateX(-50%);
	pointer-events: none;
}

.cl-effect-13 a:hover::before,
.cl-effect-13 a:focus::before {
	color: #fff;
	text-shadow: 10px 0 #fff, -10px 0 #fff;
}

.cl-effect-13 a:hover,
.cl-effect-13 a:focus {
	color: #ba7700;
}



/*_____RESET _____*/
.orbit-container .orbit-timer , .paused {
	display: none !important;
}
.orbit-container .orbit-timer .orbit-progress {
	display: none;
}
.orbit-container .orbit-slide-number {
	display: none;
}
.orbit-prev, .orbit-next {
	display: none;
}
.orbit-container {
	background: #fff;
}
h1 {
	font-size: 4em;
}
.f-large {
	font-size: 7.8em;
	line-height: 1em;
	margin: 0
}
.f-medium {
	font-size: 6em;
	margin-bottom: 0;
	line-height: 1em;
}
.f-medium-x2 {
	font-size: 5em;
	margin-bottom: 0;
	line-height: 1em;
}
.f-light {
	font-family: 'ProximaNovaLight' !important;	
}
.f-thin {
	font-family: 'ProximaNovaThin' !important;	
}
.text-block {
	padding-top: 40px;
	padding-bottom: 40px;
}
.orbit-bullets {
	display: none;
}
.margin {
	width: 100%;
	position: relative;
	margin: 40px auto;
}
.padding {
	position: relative;
	width: 100%;
	padding: 40px;
	clear: both;
}
.margin-bottom-80 {
	margin-bottom: 80px;
}
.hr-alt {
	border-bottom: 2px solid #000;
	width: 60%;
	margin: 40px auto;
	position: relative;
}
h1, h2, h3, h4, h5, h6 {

}
.subheader {
	margin-bottom: 2.5em;
}
/*_______BUTTONS_____ */
button, .button {
	border-style: none;
	border-width: 0;
	font-weight: normal;
	webkit-box-shadow: none;
	box-shadow: none;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}
button, .button.black {
	background-color: #3e3e3e;
	border: 2px solid #3e3e3e;
}
button, .button.transparent {
	background-color: transparent;
	border: 2px #fff solid;
}
button, .button.transparent.black {
	background-color: transparent;
	border: 1px #3e3e3e solid;
	color: #3e3e3e;
}

.button.transparent:hover {
	background-color: #fff;
	color: #3e3e3e;
}



.contain-to-grid {
	background: transparent;
}
.hero {
	padding: 0;
}
.second-bkg {
	background: #fafafa;
}
.third-bkg {
	background: #a3c5c5;
}

.large-left-bottom {
	padding-left: 0;
	padding-bottom: 0.9375em; 
}

.large-left-top {
	padding-left: 0;
}

.h-center {
  position: absolute;
  left: 50%;
  top: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	color: #fff;
	text-align: center;
	width: 80%;
}
.h-center h1, .h-center h2 {
	color: #fff;
}
.h-center .button {
	margin-top: 2em;
}
.h-center-wide {
	width: 80%;
}

section {
	padding: 100px 0;
	margin: 0 auto;
	display: inline-block;
	width: 100%;
}
.inline-list {
	display: inline-block;
}

/*_______ABOUT US_____*/

.about-us-top {
	position: relative;
}
.about-us-page {
	padding-top: 0;
	padding-bottom: 0;
}
.quote .orbit-bullets{
	display: inline-block;
	width: 100%;
	text-align: center;
}
.quote .orbit-bullets li {
	float: none;
	display: inline-block;
}
.about-us-top .h-text-center {
	width: 60%;
	left: 20%;
}
.quote .orbit-slides-container li h2:before {
	content: "\e018";
	position: absolute;
	top: 0;
	font-family: givakt-icons;
}
.quote .orbit-slides-container li h2:after {
	content: "\e017";
	position: absolute;
	bottom: 0;
	right: 0;
	font-family: givakt-icons;
}
.quote .orbit-slides-container li h2 {
	margin-top: 40px;
	margin-bottom: 0;
}

/*_______competence_____*/
.competence {
	padding-bottom: 0;
}
.competence p {
	margin-top: 1em;
}


/* ______CONTACT_______ */

.contact-section {
	padding-top: 200px !important;
}
.contact {
	padding-top: 0;
}
/* ... */

